--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 [x-cloak] {
     display: none;
+}
+
+@layer base {
+    html {
+        @apply font-sans;
+    }
 }
